<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/framelayout_postactivity_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardview_postactivity_post">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textview_postactivity_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="999km away"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textview_postactivity_username"
                    app:layout_constraintTop_toBottomOf="@+id/textview_postactivity_username" />

                <ImageView
                    android:id="@+id/imageview_postactivity_picture"
                    android:layout_width="@dimen/navheader_image_size"
                    android:layout_height="@dimen/navheader_image_size"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:cropToPadding="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/textview_postactivity_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="username"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/imageview_postactivity_picture"
                    app:layout_constraintTop_toTopOf="@+id/imageview_postactivity_picture" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/textview_postactivity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="12.12.1112"
            app:layout_constraintEnd_toEndOf="@+id/cardview_postactivity_post"
            app:layout_constraintTop_toBottomOf="@+id/cardview_postactivity_post" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview_postactivity_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.450">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textview_postactivity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_vertical"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textview_postactivity_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_vertical"
                    android:textSize="13sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapview_postactivity"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textview_postactivity_date"
            app:layout_constraintTop_toBottomOf="@+id/textview_postactivity_date" />

        <Button
            android:id="@+id/button_postactivity_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="TODO"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapview_postactivity" />

    </android.support.constraint.ConstraintLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>