...
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
    <item
        android:id="@+id/button_maindrawer_home"
        android:icon="@drawable/ic_maindrawer_nearby"
        android:title="@string/navigation_drawer_button_nearby" />
    <item
        android:id="@+id/button_maindrawer_profile"
        android:icon="@drawable/ic_maindrawer_profile"
        android:title="@string/navigation_drawer_button_profile" />
    <item
        android:id="@+id/button_maindrawer_services"
        android:icon="@drawable/ic_maindrawer_search"
        android:title="@string/navigation_drawer_button_services" />
    <item
        android:id="@+id/button_maindrawer_myposts"
        android:icon="@drawable/ic_maindrawer_myposts"
        android:title="@string/navigation_drawer_myposts" />
    <item
        android:id="@+id/button_maindrawer_todoList"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/navigation_drawer_button_TODO_list" />
...
